
HOW TO UPDATE?

- pip or pip3 install dearpygui --upgrade
- Read the `Breaking Changes` section (here in the changelog).
- Please report any issue!

-----------------------------------------------------------------------
 VERSION 0.6.x
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.6.x

-----------------------------------------------------------------------
 VERSION 0.6.18
-----------------------------------------------------------------------

Fixes:
- delete_item: fixed issue with windows not working properly
- window_size: fixed issue where sizes were a frame late
- textures:    fixed several issues with texture creation

-----------------------------------------------------------------------
 VERSION 0.6.16
-----------------------------------------------------------------------

Fixes:
- delete_item: fixed issue with windows not working properly

-----------------------------------------------------------------------
 VERSION 0.6.15
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.6.15

New Keywords:
- plot:               Added "format" keyword
- plot:               Added "y2axis_no_gridlines" keyword
- plot:               Added "y2axis_no_tick_marks" keyword
- plot:               Added "y2axis_no_tick_labels" keyword
- plot:               Added "y2axis_log_scale" keyword
- plot:               Added "y2axis_invert" keyword
- plot:               Added "y2axis_lock_min" keyword
- plot:               Added "y2axis_lock_max" keyword
- plot:               Added "yaxis_no_gridlines" keyword
- plot:               Added "y3axis_no_tick_marks" keyword
- plot:               Added "y3axis_no_tick_labels" keyword
- plot:               Added "y3axis_log_scale" keyword
- plot:               Added "y3axis_invert" keyword
- plot:               Added "y3axis_lock_min" keyword